--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("/Portofolio_Homework/assests/images/back.jpg");
+    background: url("/assests/images/back.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
