--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,288 +1,490 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
-    background: url("../images/back.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    background-image: url(../images/gravel.png)
 }
-.container{
-    background-color: rgba(246, 239, 255,0.8);
-    width: 800px;
-    height: 800px;
-    margin: 0 auto;
-}
-/*header of the container*/
-.nav{
-   background: rgba(246, 239, 255,0.8);
-
-}
-.menu{
-    background-color: rgba(255, 255, 255,0.0);
-    width: 800px;
-    height: 100px;
-    margin: auto;
-    border-bottom: 1px solid #4c4c4c;
-    overflow: hidden;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-.id{
-    background-color: #4aaaa5;
-    width: 25%;
-    text-align: center;
-    line-height: 10%;
-    height: 50px;
-    padding-top:10px;
-    position: relative;
-    top: 40px;
-    left: 10px;
-    color: #ffffff;
-}
-.id h2{
-    position: relative;
-    top: -3px;
-}
-.about,
-.contact,
-.port{
-    float: right;
-    position: relative;
-    right: 0px;
-    border-right: #4c4c4c solid 1px;
-    padding-right: 10px;
-    height: 50px;
-    bottom: 20px;
-    padding-top: 10px;
-    padding-left: 10px;
-    color: #000000;
-}
-
-div .port:hover{
-    background-color: #001f3f;
-}
-div .about:hover{
-    background-color: #001f3f;
-
-}
-div .contact:hover{
-    background-color: #001f3f;
-
-}
-.about{
-    background-color: #4aaaa5;
-}
-.about a{
-    color: white;
-    
-}
-
-a{
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    color: #000000;
-    
-}
-.about .port .contact a{
-    position: relative;
-    top: 10px;
-}
-a:hover{
-    color: white;
-}
-/*body of the container*/
-.inscontainer{
+.header{
     width: 100%;
-    position: relative;
-    top:0px;
-    overflow: auto;
-    background-color: rgba(246, 239, 255,0.5);
-    line-height: 3px;
-    height: 100%;
-    
+    height: auto;
+    background: #ffffff;
 }
-.imgbox{
-    width: 150px;
-    height: 150px;
+[class*="col-"]{
+    width: 100%;
+    height: auto;
     float: left;
-    overflow: hidden;
-    position: relative;
-    top: 30px;
-    left: 10px;
-    border: 1px solid #322E18;
+    display: block;
 }
-.artTitle{
-    position: relative;
-    top: 15px;
-    left:10px;
-    padding-top:20px;
+.row{
+    background: white;
 }
-.imgbox img{
-    width: 150px;
-    height: 150px;
-}
-
-.inscontainer p{
-    float: left;
-    position: relative;
-    left: 15px;
-    top:10px;
-}
-.inscontainer ul{
-    float: left;
-    position: relative;
-    left: 15px;
-    top:10px;
-    line-height: 20px;
-}
-.inscontainer #firstp{
-    top: 20px;
-}
-.clearfix{
+.row::after{
+    content: "";
     clear: both;
+    display: table;
+
 }
-.beforfooter{
-    background: #2C2A4A;
+.bf{
+    background: #4aaaa5;
     height: 10px;
     width: 100%;
+    position: fixed;
+    bottom: 30px;
 }
-footer{
-    background: #F6EFFF;
-    height: 30px;
-    color: black;
+.foot{
     text-align: center;
-    padding-top: 20px
+    background: #666666;
+    height: 30px;
+    padding-top: 10px;
+    width: 100%;
+    font-size: 15px;
+    color: #ffffff;
+    position: fixed;
+    bottom: 0px;
 }
-/*portofolio page*/
-.ptable{
-    width: 650px;
-    height: 100%;
-    position: relative;
-    top: 70px;
-    left: 77px
+.imgtable{
+    width: 100%;
+    margin: auto;
+    height: auto;
 }
-.imgb{
+.imgbox{
     position: relative;
-    width: 300px;
-    height: 150px;
-    border: 1px black solid;
+    width: 95%;
+    margin-top: 20px;
     float: left;
-}
-.im1 {
-    left: 15px;
-    top: 10px;
-}
-.im2{
-    left: 20px;
-    top: 10px;
-}
+    left: 10px;
+    
 
-.im4{
-    left: 15px;
-    top: 15px;
 }
-.im5{
-    left: 20px;
-    top: 15px;
+.imgtable img{
+    width: 100%;
+    height: 200px;
 }
-
-.im7{
-    left: 15px;
-    top: 20px;
-}
-.im8{
-    left: 20px;
-    top: 20px;
-}
-.im9{
-    left: 15px;
-    top: 25px;
-}
-.im10{
-    left: 20px;
-    top: 25px;
-}
-.ptable img{
-    width: 300px;
-    height: 150px;
-}
-.title{
-    position: absolute;
-    top: 90px;
+.cap{
     width: 100%;
     height: 30px;
-    padding-top:20px;
-    background: #001f3f;
-    color: white;
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    bottom: 30px;
+    background: #4aaaa5;
+    padding-top: 5px;
 }
 .formdiv{
-    width: 600px;
-    position: relative;
-    top: 70px;
-    left: 100px;
-    font-family: cursive;
+    width: 90%;
     height: 500px;
-    overflow: hidden;
+
+}
+.inp{
+    display: block;
+    margin-top:15px;
+    margin-left: 5px;
 }
 
-#first{
-    position: relative;
-    float: left;
-    top: 20px;
-    left: 5px;
-}
 #fname{
-    width: 95%;
-    float: left;
-    position: relative;
+    width: 100%;
     padding: 10px 10px;
-    top: 32px;
-    left: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
-#sec{
-    position: relative;
-    float: left;
-    top: 55px;
-    left: 5px;
-}
+
 #email{
-    width: 95%;
-    float: left;
-    position: relative;
-    left: 5px;
-    top: 67px;
+    width: 100%;
     padding: 10px 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
-}
-#third{
-    position: relative;
-    float: left;
-    top: 80px;
-    left: 5px;
 }
 #txt{
-    width: 95%;
-    position: relative;
-    top: 95px;
+    width: 100%;
     padding: 10px 10px;
-    left:5px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
 input[type=submit]{
-    width: 99%;
-    background-color: #4CAF50;
+    width: 25%;
+    background-color: #4aaaa5;
     color: white;
     padding: 14px 20px;
-    position: relative;
-    top: 140px;
-    left:5px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     
+}  
+.container{
+    margin-bottom: 40px;
+}
+@media only screen and (max-width: 640px){
+    .header{
+        width: 100%;
+        height: auto;
+    }
+    .name{
+        padding-top: 20px;
+        width: 100%;
+        height: 80px;
+        background-color:#4aaaa5;
+        text-align: center;
+        font-size: 30px;
+        color: #ffffff;
+        font-weight: bold;
+        display:block;
+    }
+    .nav{
+        width: 100%;
+        height: auto;
+    }
+    .menu{
+        width: 100%;
+        height: 80px;
+        text-align: center;
+        display: block;
+    }
+    .nav .menu ul{
+        padding-top: 20px;
+        width: 100%;
+        list-style-type: none;
+        height: 50px;
+    }
+    .nav .menu ul li{
+        display: inline-block;
+        padding-right: 20px;
+        padding-left: 5px;
+        border-right: 1px solid #dddddd;
+    }
+    .nav ul li:last-child{
+        border: none;
+    }
+    .nav  ul li a{
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
+        -webkit-transition: font-size 0.5s ease;
+        -moz-transition: font-size 0.5s ease;
+        -o-transition: font-size 0.5s ease;
+        -ms-transition: font-size 0.5s ease;
+        transition: font-size 0.5s ease;
+    }
+    .menu ul li a:hover{
+        font-size: 30px;
+        color: #4aaaa5;
+    }
+    .container{
+        width: 100%;
+        margin-top: 20px;
+        background: white;
+        height: auto;
+        padding: 10px;
+        
+    }
+    .title{
+        padding-top: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #4aaaa5;
+    }
+    
+    #profimg{
+        width: 100%;
+        height: auto;
+    }
+    .container p{
+        font-size: 20px;
+        font-weight: bold;
+        text-align: justify;
+    }
+
+   
+    
+}
+@media only screen and (min-width: 641px){
+    .header{
+        width: 100%;
+        height: auto;
+    }
+    .name{
+        padding-top: 20px;
+        width: 100%;
+        height: 80px;
+        background-color:#4aaaa5;
+        text-align: center;
+        font-size: 30px;
+        color: #ffffff;
+        font-weight: bold;
+        display:block;
+    }
+    .nav{
+        width: 100%;
+        height: auto;
+    }
+    .menu{
+        width: 100%;
+        height: 80px;
+        text-align: center;
+        display: block;
+    }
+    .nav .menu ul{
+        padding-top: 20px;
+        width: 100%;
+        list-style-type: none;
+        height: 50px;
+    }
+    .nav .menu ul li{
+        display: inline-block;
+        padding-right: 20px;
+        padding-left: 5px;
+        border-right: 1px solid #dddddd;
+    }
+    .nav ul li:last-child{
+        border: none;
+    }
+    .nav  ul li a{
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
+        -webkit-transition: font-size 0.5s ease;
+        -moz-transition: font-size 0.5s ease;
+        -o-transition: font-size 0.5s ease;
+        -ms-transition: font-size 0.5s ease;
+        transition: font-size 0.5s ease;
+    }
+    .menu ul li a:hover{
+        font-size: 30px;
+        color: #4aaaa5;
+    }
+    .container{
+        width: 100%;
+        margin-top: 20px;
+        background: white;
+        height: auto;
+        padding: 10px;
+        
+    }
+    .title{
+        padding-top: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #4aaaa5;
+    }
+
+    #profimg{
+        width: 100%;
+        height: auto;
+    }
+    .container p{
+        font-size: 20px;
+        font-weight: bold;
+        text-align: justify;
+    }
+
+   
+    
+}
+@media only screen and (min-width:768px){
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 92.66%;}
+    .col-m-12 {width: 100%;}
+    .header{
+        width: 100%;
+        height: 80px;
+    }
+   
+    .name{
+        padding-top: 20px;
+        width: 50%;
+        height: 80px;
+        background-color:#4aaaa5;
+        text-align: center;
+        font-size: 30px;
+        color: #ffffff;
+        font-weight: bold;
+        float: left;
+    }
+    .nav{
+        width: 90%;
+        height: 80px;
+        margin: auto;
+    }
+    .menu{
+        width: 300px;
+        height: 80px;
+        float: right;
+    }
+    .nav .menu ul{
+        padding-top: 25px;
+        width: 100%;
+        list-style-type: none;
+        float: right;
+    }
+    .nav .menu ul li{
+        
+        padding-right: 5px;
+        padding-left: 5px;
+        border-right: 1px solid #dddddd;
+        float: right;
+    }
+    .nav ul li:last-child{
+        border: none;
+    }
+    .nav  ul li a{
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
+        -webkit-transition: font-size 0.5s ease;
+        -moz-transition: font-size 0.5s ease;
+        -o-transition: font-size 0.5s ease;
+        -ms-transition: font-size 0.5s ease;
+        transition: font-size 0.5s ease;
+    }
+    .menu ul li a:hover{
+        font-size: 30px;
+        color: #4aaaa5;
+    }
+    .container{
+        width: 90%;
+        margin: auto;
+        margin-top: 20px;
+        height: 750px;
+        padding: 10px;
+        
+    }
+    .title{
+        padding-top: 20px;
+        font-size: 30px;
+        font-weight: bold;
+        color: #4aaaa5;
+
+    }
+
+    
+    #profimg{
+        width: 98%;
+        height: 200px;
+    }
+    .container p{
+        font-size: 20px;
+        font-weight: bold;
+        text-align: justify;
+        padding-left: 10px;
+        background: white;
+
+    }
+   
+
+}
+@media only screen and (min-width: 980px){
+    .col-l-1 {width: 8.33%;}
+    .col-l-2 {width: 16.66%;}
+    .col-l-3 {width: 25%;}
+    .col-l-4 {width: 33.33%;}
+    .col-l-5 {width: 41.66%;}
+    .col-l-6 {width: 50%;}
+    .col-l-7 {width: 58.33%;}
+    .col-l-8 {width: 66.66%;}
+    .col-l-9 {width: 75%;}
+    .col-l-10 {width: 83.33%;}
+    .col-l-11 {width: 92.66%;}
+    .col-l-12 {width: 100%;}
+    .header{
+        width: 100%;
+        height: 80px;
+    }
+   
+    .name{
+        padding-top: 20px;
+        width: 25%;
+        height: 80px;
+        background-color:#4aaaa5;
+        text-align: center;
+        font-size: 30px;
+        color: #ffffff;
+        font-weight: bold;
+        float: left;
+    }
+    .nav{
+        width: 960px;
+        height: 80px;
+        margin: auto;
+    }
+    .menu{
+        width: 400px;
+        height: 80px;
+        float: right;
+    }
+    .nav .menu ul{
+        padding-top: 25px;
+        width: 100%;
+        list-style-type: none;
+        float: right;
+        position: relative;
+        left: 70px;
+    }
+    .nav .menu ul li{
+        
+        padding-right: 10px;
+        padding-left: 5px;
+        border-right: 1px solid #dddddd;
+        float: left;
+    }
+    .nav ul li:last-child{
+        border: none;
+    }
+    .nav  ul li a{
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: bold;
+        color: black;
+        -webkit-transition: font-size 0.5s ease;
+        -moz-transition: font-size 0.5s ease;
+        -o-transition: font-size 0.5s ease;
+        -ms-transition: font-size 0.5s ease;
+        transition: font-size 0.5s ease;
+    }
+    .menu ul li a:hover{
+        font-size: 36px;
+        color: #4aaaa5;
+    }
+    .container{
+        width: 960px;
+        margin: auto;
+        margin-top: 20px;
+        height: 800px;
+        padding: 10px;
+        
+    }
+    .title{
+        padding-top: 20px;
+        font-size: 30px;
+        font-weight: bold;
+        color: #4aaaa5;
+
+    }
+
+    #profimg{
+        width: 98%;
+        height: 200px;
+    }
+    .container p{
+        font-size: 20px;
+        font-weight: bold;
+        text-align: justify;
+        padding-left: 10px;
+        background: white;
+
+    }
+ 
+ 
 }
